--- a/proyecto-react/src/components/Navbar.css
+++ b/proyecto-react/src/components/Navbar.css
@@ -1,10 +1,8 @@
-img {
-height: 100px;
-}
+
 nav{
     display: flex;
     justify-content: space-between;
 }
 button{
-    color:blueviolet;
+    background-attachment: fixed;
 }
